macros/tests/compile_fail/freshness_missing_variable.stderr
error: expected `;`
  --> tests/compile_fail/freshness_missing_variable.rs:17:5
   |
17 |     }
   |     ^
